# ironoc-pytest

./: .gitignore  README.md  SECURITY.md  github_api.py  github_model.py  noxfile.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: auto-assign.yml  pylint.yml  python-package.yml  python-publish.yml
src/ironoc_pytest_conorheffron/: __init__.py  github_api.py  github_model.py
src/ironoc_pytest_conorheffron/tests/: __init__.py  test_github_api.py
tests/: test_github_api.py
